fix(form/autocompleted): include z-index as a variable

--- a/components/form/autocompleted/src/index.scss
+++ b/components/form/autocompleted/src/index.scss
@@ -50,7 +50,7 @@
     margin-top: $mt-form-autocompleted;
     position: absolute;
     right: 0;
-    z-index: 1;
+    z-index: $z-form-autocompleted-suggests;
 
     &Item {
       padding: $p-form-autocompleted-item;
